--- a/chrome-extension/html/settings.html
+++ b/chrome-extension/html/settings.html
@@ -76,6 +76,13 @@
 						<span class="color color3"></span>
 						<span class="selected"><i class="icon-ok"></i></span>
 					</li>
+					<li class="drk_button_li synthwave80s" data-theme="synthwave80s">
+						<span class="drk_theme_title">Synthwave 80s</span>
+						<span class="color color1"></span>
+						<span class="color color2"></span>
+						<span class="color color3"></span>
+						<span class="selected"><i class="icon-ok"></i></span>
+					</li>
 				</ul>
 			</div>
 		</section>
